Migration to Railway: Modernize encryption and fix compilation errors