@@ -4,7 +4,7 @@ package dataset;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
-
+import java.util.Base64;
 
 public class AESDecryption {
 	byte[] keyBytes = new byte[] {
@@ -24,7 +24,7 @@ public class AESDecryption {
 	}
 	public String toDeycrypt(String  encrypted) {
 		try {
-			byte[] dec = new sun.misc.BASE64Decoder().decodeBuffer(encrypted);
+			byte[] dec = Base64.getDecoder().decode(encrypted);
 			byte[] utf8 = cipher.doFinal(dec);
 			return new String(utf8, "UTF8");
 		} catch (Exception e) {
