@@ -5,7 +5,7 @@ package dataset;
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
 
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 
 public class AesEncryption {
@@ -31,7 +31,7 @@ public class AesEncryption {
 		try {
 			
 			byte[] utf8 = cipher.doFinal(content);
-			return (new BASE64Encoder()).encode(utf8);
+			return Base64.getEncoder().encodeToString(utf8);
 			
 		} catch (Exception e) {
 			e.printStackTrace();
